--- a/less/variables.less
+++ b/less/variables.less
@@ -15,3 +15,5 @@
 
 //escaping
 @mobile: ~ "(max-width: 500px)";
+
+@tablet: ~ "(max-width: 800px)";
